# 3D-Spectrogram

./: CMakeLists.txt  README.md  pom.xml  vcpkg.json
editor/: pom.xml
editor/src/main/java/com/pine/: PineEngine.java
editor/src/main/java/com/pine/comp/: AbstractFormField.java  AccordionPanel.java  FormPanel.java
editor/src/main/java/com/pine/comp/impl/: BooleanField.java  ColorField.java  FloatField.java  IntField.java  OptionsField.java  QuaternionField.java  StringField.java  Vector2Field.java  Vector3Field.java  Vector4Field.java
editor/src/main/java/com/pine/core/: AbstractWindow.java  WindowService.java
editor/src/main/java/com/pine/core/dock/: DockPanel.java
editor/src/main/java/com/pine/engine/: Engine.java  EngineUtils.java
editor/src/main/java/com/pine/engine/injection/: Disposable.java  EngineExternalModule.java  PBean.java  PInject.java  PInjector.java  PostCreation.java
editor/src/main/java/com/pine/engine/inspection/: Color.java  FieldDTO.java  FieldType.java  Inspectable.java  MutableField.java  ResourceTypeField.java  SelectableEnum.java
editor/src/main/java/com/pine/engine/repository/: CameraRepository.java  ClockRepository.java  DebugShadingModel.java  RuntimeRepository.java
editor/src/main/java/com/pine/engine/type/: LightType.java  MaterialRenderingMode.java  UBODeclaration.java
editor/src/main/java/com/pine/impl/: AbstractView.java  EditorWindow.java  FSUtil.java  GLSLVersion.java  Icons.java  InspectorPanel.java  Loggable.java  NativeDialogService.java  ViewportPanel.java  WindowService.java
editor/src/main/java/com/pine/panels/files/: FilesHeaderPanel.java
editor/src/main/java/com/pine/panels/inspector/: InspectorPanel.java
editor/src/main/java/com/pine/panels/viewport/: ViewportPanel.java
editor/src/main/java/com/pine/service/: FilesService.java
editor/src/main/java/com/pine/window/: EditorWindow.java
editor/src/main/resources/: log4j2.xml
editor/src/main/resources/shaders/: VOXELS.frag
editor/src/main/resources/shaders/tool/: GRID.frag
engine/src/main/java/com/pine/: Engine.java
engine/src/main/java/com/pine/repository/core/: CoreFBORepository.java  CoreShaderRepository.java
engine/src/main/java/com/pine/repository/voxelization/: VoxelRepository.java
engine/src/main/java/com/pine/service/camera/: CameraSyncService.java
engine/src/main/java/com/pine/service/svo/: LorenzAttractorDemo.java
resources/shaders/: CreateRay.glsl  GlobalDataBuffer.glsl  RENDERER.frag
resources/shaders/tools/: Background.frag  Grid.frag  VoxelDebugVisualizer.frag
resources/shaders/util/: RayTracer.glsl
src/: definitions.h
src/common/: AbstractRuntimeComponent.h
src/common/inspection/: Inspectable.cpp  Inspectable.h  InspectableMember.h  InspectedField.h
src/common/interface/: Icons.h  Initializable.h  Synchornizable.h
src/context/: ApplicationContext.cpp  ApplicationContext.h
src/context/editor/: EditorPanel.cpp  EditorPanel.h  NotificationPanel.cpp  NotificationPanel.h
src/context/editor/abstract/: AbstractPanel.h  IPanel.h
src/context/editor/abstract/form/: AccordionPanel.cpp  FormPanel.cpp
src/context/editor/abstract/form/types/: BooleanField.cpp  BooleanField.h  FloatField.cpp  FloatField.h  IntField.cpp  IntField.h  MethodField.h  StringField.cpp
src/context/editor/dock-spaces/: InformationPanel.cpp  InformationPanel.h
src/context/editor/dock-spaces/inspector/: AudioData.h  AudioProcessor.h  FilePickerUtil.h  InspectorPanel.cpp  InspectorPanel.h
src/context/editor/dock-spaces/inspector/components/: TimeStampPickerPanel.cpp  TimeStampPickerPanel.h  WaveformPanel.cpp  WaveformPanel.h
src/context/editor/dock-spaces/viewport/: CameraPositionPanel.cpp  ViewportPanel.cpp  ViewportPanel.h
src/context/editor/dock-spaces/viewport/components/: CameraGizmoPanel.cpp  CameraGizmoPanel.h
src/context/engine/: EngineContext.cpp  EngineContext.h
src/context/engine/passes/: AbstractPass.cpp  AbstractPass.h  PassesService.cpp  PassesService.h
src/context/engine/render-pass/: AbstractRenderPass.h
src/context/engine/render-pass/impl/tools/: BackgroundPass.cpp  BackgroundPass.h  GridPass.cpp  GridPass.h  VisualizerPass.cpp  VisualizerPass.h  VoxelVisualizerPass.cpp  VoxelVisualizerPass.h
src/context/glfw/: GLFWContext.h
src/context/gui/: GuiContext.cpp  GuiContext.h
src/context/vulkan/: VulkanContext.cpp  VulkanContext.h
src/dto/push-constant/: BackgroundPushConstant.h  VoxelDebugSettingsPushConstant.h
src/dto/ubo/: GlobalDataUBO.h
src/enum/: FieldType.h  engine-definitions.h
src/repository/buffers/: CoreBuffers.cpp  CoreBuffers.h
src/repository/descriptors/: CoreDescriptorSets.cpp  CoreDescriptorSets.h
src/repository/editor/: EditorRepository.cpp  EditorRepository.h  GlobalRepository.cpp  GlobalRepository.h  SpectrogramRepository.cpp  SpectrogramRepository.h
src/repository/engine/: EngineRepository.cpp
src/repository/framebuffer/: CoreFrameBuffers.cpp  CoreFrameBuffers.h
src/repository/notification/: Notification.h  NotificationRepository.cpp  NotificationRepository.h
src/repository/world/components/: TransformComponent.cpp
src/service/audio/: AudioData.h  AudioProcessorService.cpp  AudioProcessorService.h  STFTUtil.cpp  STFTUtil.h
src/service/camera/: Camera.cpp  Camera.h  CameraService.cpp  CameraService.h
src/service/controls/: ControlService.cpp  ControlService.h
src/service/descriptor/: DescriptorService.cpp  DescriptorService.h
src/service/pipeline/: PipelineService.cpp
src/service/theme/: ThemeService.cpp  ThemeService.h
src/service/voxel/: VoxelProcessorService.cpp  VoxelProcessorService.h
src/service/voxel/curve/: AbstractCurve.h  ConicalHelixCurve.h  HarmonicPathCurve.h  HelixCurve.h  HelixVerticalCurve.h  LorenzAttractorCurve.h  SineCurve.h  SineCurve2D.h  SphericalSpiralCurve.h  ThomasAttractorCurve.h  TorusKnotCurve.h  VivianiCurve.h
src/service/voxel/impl/: OctreeNode.h  SparseVoxelOctreeBuilder.cpp  SparseVoxelOctreeBuilder.h  VoxelData.h
src/util/: FilesUtil.h  ShaderUtil.cpp  UIUtil.h  VulkanUtils.h
(+61 files in other folders)
